lintian-brush (0.19) UNRELEASED; urgency=medium

  * Run python fixers in-process, to avoid Python interpreter and module
    loading overhead. This provides a ~30% performance improvement for
    some packages.
  * Add fixer for debhelper-tools-from-autotools-dev-are-deprecated.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 03 Aug 2019 11:47:54 +0000

lintian-brush (0.18) unstable; urgency=medium

  * Fix copyright fields before parsing with python-debian.
  * Add fixer for dh-clean-k-is-deprecated.
  * Handle missing bugtracker/web subkey for META.json files.
  * Upgrade debian/rules in some cases when updating to debhelper 12.
  * Don't remove debian/patches/README.
  * Use the 'Source' field in copyright files when looking for possible
    upstream repositories.
  * Don't worry about preserving all formatting for YAML files; comments
    and indentation are already preserved.
  * Allow stripping trailing whitespace from debian/copyright when modifying
    it.
  * Don't make homepage-field-uses-insecure-uri fixer fail when it can't
    access homepage over HTTPS. Closes: #933682

 -- Jelmer Vernooĳ <jelmer@debian.org>  Thu, 25 Jul 2019 22:05:12 +0000

lintian-brush (0.17) unstable; urgency=medium

  [ Dmitry Bogatov ]
  * Support policy version bumps from 4.3.0 to 4.4.0. Closes: #932314

  [ Jelmer Vernooĳ ]
  * Guess (with low certainty) repositories from README.
  * Add support for reading upstream metadata from META.json.
  * Add support for reading upstream metadata from META.yml files.
  * Add support for reading upstream metadata from DOAP files.
  * Add (hidden) --allow-reformatting flag.
  * Add support for Repository-Browse.
  * upstream-metadata-file-is-missing: Derive Repository-Browse from
    Repository when possible.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 24 Jul 2019 22:12:00 +0000

lintian-brush (0.16) unstable; urgency=medium

  * Don't export expired signatures; these may still be useful, and