@@ -49,6 +49,7 @@ __version__ = (0, 19)
 version_string = '.'.join(map(str, __version__))
 SUPPORTED_CERTAINTIES = ['certain', 'possible', None]
 DEFAULT_MINIMUM_CERTAINTY = 'certain'
+USER_AGENT = 'lintian-brush/' + version_string
 
 
 class NoChanges(Exception):
