@@ -4,6 +4,7 @@ lintian-brush (0.19) UNRELEASED; urgency=medium
     loading overhead. This provides a ~30% performance improvement for
     some packages.
   * Add fixer for debhelper-tools-from-autotools-dev-are-deprecated.
+  * Set User-Agent when sending HTTP requests.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 03 Aug 2019 11:47:54 +0000
 
